--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,36 +205,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['France', 'Australia']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the name of the country for each team\n",
-    "countries = None\n",
+    "countries = []\n",
+    "\n",
+    "for i in soccer_match:\n",
+    "    countries.append(i['country'])\n",
+    "    \n",
+    "countries\n",
     "# code goes here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['blue', 'white', 'red'], ['green', 'gold']]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
-    "colors = None\n",
+    "colors = []\n",
+    "\n",
+    "for i in soccer_match:\n",
+    "    colors.append(i['colors'])\n",
+    "\n",
+    "colors\n",
     "# code goes here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hugo LLORIS',\n",
+       " 'Benjamin PAVARD',\n",
+       " 'Raphael VARANE',\n",
+       " 'Samuel UMTITI',\n",
+       " 'Paul POGBA',\n",
+       " 'Antoine GRIEZMANN',\n",
+       " 'Kylian MBAPPE',\n",
+       " 'Ousmane DEMBELE',\n",
+       " 'Corentin TOLISSO',\n",
+       " 'Ngolo KANTE',\n",
+       " 'Lucas HERNANDEZ',\n",
+       " 'Mathew RYAN',\n",
+       " 'Mark MILLIGAN',\n",
+       " 'Mathew LECKIE',\n",
+       " 'Robbie KRUSE',\n",
+       " 'Andrew NABBOUT',\n",
+       " 'Aaron MOOY',\n",
+       " 'Mile JEDINAK',\n",
+       " 'Aziz BEHICH',\n",
+       " 'Joshua RISDON',\n",
+       " 'Trent SAINSBURY',\n",
+       " 'Tom ROGIC']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from each team\n",
     "# this should be only one list containing the dictionaries for each of the country's players\n",
-    "players = None\n",
+    "players = []\n",
+    "\n",
+    "for i in soccer_match:\n",
+    "    for name in i['players']:\n",
+    "        players.append(name['name'])\n",
+    "players\n",
+    "\n",
     "# code goes here"
    ]
   },
@@ -246,7 +316,9 @@
    "source": [
     "# iterate over the soccer_match list to create a new list with the captains from each team\n",
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
-    "captains = None\n",
+    "captains = []\n",
+    "\n",
+    "\n",
     "# code goes here"
    ]
   },
@@ -331,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
