--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
     "players = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    for name in i['players']:\n",
+    "    for e in i['players']:\n",
     "        players.append(name['name'])\n",
     "players\n",
     "\n",
