--- a/index.ipynb
+++ b/index.ipynb
@@ -301,8 +301,8 @@
     "players = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    for e in i['players']:\n",
-    "        players.append(name['name'])\n",
+    "    for i2 in i['players']:\n",
+    "        players.append(i2['name'])\n",
     "players\n",
     "\n",
     "# code goes here"
