--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
     "        players.append(i2['name'])\n",
     "players\n",
     "\n",
-    "for i in soccer_match['players':\n",
+    "for i in soccer_match['players']:\n",
     "    for i2 in i['players']:\n",
     "        players.append(i2['name'])\n",
     "\n",
