--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
     "\n",
     "for i in soccer_match['players']:\n",
     "    for i2 in i['players']:\n",
-    "        players.append(i2['name'])\n",
+    "        players.append(i['name'])\n",
     "\n",
     "# code goes here"
    ]
