Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,13 +280,11 @@
     "# this should be only one list containing the dictionaries for each of the country's players\n",
     "players = []\n",
     "\n",
-    "# for i in soccer_match:\n",
-    "#     for i2 in i['players']:\n",
-    "#         players.append(i2['name'])\n",
-    "# players\n",
+    "for i in soccer_match:\n",
+    "    for i2 in i['players']:\n",
+    "        players.append(i2['name'])\n",
+    "players\n",
     "\n",
-    "for i in soccer_match['players']:\n",
-    "    players.append(i['name'])\n",
     "\n",
     "# code goes here"
    ]
