--- a/index.ipynb
+++ b/index.ipynb
@@ -260,19 +260,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-09069e8b4c22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# players\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoccer_match\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'players'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mplayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
+     "data": {
+      "text/plain": [
+       "['Hugo LLORIS',\n",
+       " 'Benjamin PAVARD',\n",
+       " 'Raphael VARANE',\n",
+       " 'Samuel UMTITI',\n",
+       " 'Paul POGBA',\n",
+       " 'Antoine GRIEZMANN',\n",
+       " 'Kylian MBAPPE',\n",
+       " 'Ousmane DEMBELE',\n",
+       " 'Corentin TOLISSO',\n",
+       " 'Ngolo KANTE',\n",
+       " 'Lucas HERNANDEZ',\n",
+       " 'Mathew RYAN',\n",
+       " 'Mark MILLIGAN',\n",
+       " 'Mathew LECKIE',\n",
+       " 'Robbie KRUSE',\n",
+       " 'Andrew NABBOUT',\n",
+       " 'Aaron MOOY',\n",
+       " 'Mile JEDINAK',\n",
+       " 'Aziz BEHICH',\n",
+       " 'Joshua RISDON',\n",
+       " 'Trent SAINSBURY',\n",
+       " 'Tom ROGIC']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
