Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,6 +319,7 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "captains = []\n",
     "\n",
+    "for i in soc\n",
     "\n",
     "# code goes here"
    ]
