--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,9 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "captains = []\n",
     "\n",
-    "for i in soc\n",
+    "for i in soccer_match:\n",
+    "    for i2 in i['players']:\n",
+    "        \n",
     "\n",
     "# code goes here"
    ]
