Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        \n",
+    "        captains.append(i2['captain'])\n",
     "\n",
     "# code goes here"
    ]
