--- a/index.ipynb
+++ b/index.ipynb
@@ -311,9 +311,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the captains from each team\n",
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
@@ -322,6 +354,7 @@
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
     "        captains.append(i2['captain'])\n",
+    "captains\n",
     "\n",
     "# code goes here"
    ]
