Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,7 +353,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        captains.append(i2['captain'])\n",
+    "        if captains.append(i2['captain'])\n",
     "captains\n",
     "\n",
     "# code goes here"
