Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,7 +353,8 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        if capti2['captain'\n",
+    "        if i2['captain'] == True:\n",
+    "            \n",
     "captains\n",
     "\n",
     "# code goes here"
