Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
     "        if i2['captain'] == True:\n",
-    "            \n",
+    "            i2['name']\n",
     "captains\n",
     "\n",
     "# code goes here"
