Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,6 +355,8 @@
     "    for i2 in i['players']:\n",
     "        if i2['captain'] == True:\n",
     "            i2['name']\n",
+    "        else:\n",
+    "            pass\n",
     "captains\n",
     "\n",
     "# code goes here"
