Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,37 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[True,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " True,\n",
-       " False,\n",
-       " False,\n",
-       " False,\n",
-       " False]"
+       "['Hugo LLORIS', 'Mile JEDINAK']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +333,7 @@
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
     "        if i2['captain'] == True:\n",
-    "            i2['name']\n",
+    "            captains.append(i2['name'])\n",
     "        else:\n",
     "            pass\n",
     "captains\n",
