Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,7 @@
     "home_team_players = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    if \n",
+    "    if i['hometeam']\n",
     "# code goes here"
    ]
   },
