--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,8 @@
     "home_team_players = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    if i['hometeam'] == \n",
+    "    if i['hometeam'] == True:\n",
+    "        i['players']\n",
     "# code goes here"
    ]
   },
