--- a/index.ipynb
+++ b/index.ipynb
@@ -343,19 +343,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from ONLY the home team\n",
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
     "home_team_players = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    if i['hometeam'] == True:\n",
+    "    if i['home_team'] == True:\n",
     "        i['players']\n",
     "\n",
-    "\n",
+    "home_team_players\n",
     "# code goes here"
    ]
   },
