--- a/index.ipynb
+++ b/index.ipynb
@@ -343,16 +343,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[[{'name': 'Hugo LLORIS',\n",
+       "   'captain': True,\n",
+       "   'shirt_number': 1,\n",
+       "   'position': 'Goalie'},\n",
+       "  {'name': 'Benjamin PAVARD',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 2,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Raphael VARANE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 4,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Samuel UMTITI',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 5,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Paul POGBA',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 6,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Antoine GRIEZMANN',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 7,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Kylian MBAPPE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 10,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Ousmane DEMBELE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 11,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Corentin TOLISSO',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 12,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Ngolo KANTE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 13,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Lucas HERNANDEZ',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 21,\n",
+       "   'position': 'Defender'}]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +407,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    if i['home_team'] == True:\n",
-    "        i['players']\n",
+    "        home_team_players.append(i['players'])\n",
     "\n",
     "home_team_players\n",
     "# code goes here"
