--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,12 @@
     "    if i['home_team'] == True:\n",
     "        home_team_players.append(i['players'])\n",
     "\n",
+    "for i in s\n",
+    "        \n",
     "home_team_players\n",
+    "\n",
+    "\n",
+    "\n",
     "# code goes here"
    ]
   },
