Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,9 @@
     "    if i['home_team'] == True:\n",
     "        home_team_players.append(i['players'])\n",
     "\n",
-    "for i in s\n",
+    "for i in soccer_match:\n",
+    "    if i['home_team'] == True:\n",
+    "        \n",
     "        \n",
     "home_team_players\n",
     "\n",
