--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    if i['home_team'] == True:\n",
-    "        \n",
+    "        for i\n",
     "        \n",
     "home_team_players\n",
     "\n",
