Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,8 @@
     "\n",
     "for i in soccer_match:\n",
     "    if i['home_team'] == True:\n",
-    "        for i\n",
+    "        for i2 in i['players']:\n",
+    "            \n",
     "        \n",
     "home_team_players\n",
     "\n",
