--- a/index.ipynb
+++ b/index.ipynb
@@ -412,7 +412,7 @@
     "for i in soccer_match:\n",
     "    if i['home_team'] == True:\n",
     "        for i2 in i['players']:\n",
-    "            \n",
+    "            home_team_pl\n",
     "        \n",
     "home_team_players\n",
     "\n",
