Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -392,10 +392,21 @@
        "  {'name': 'Lucas HERNANDEZ',\n",
        "   'captain': False,\n",
        "   'shirt_number': 21,\n",
-       "   'position': 'Defender'}]]"
+       "   'position': 'Defender'}],\n",
+       " 'Hugo LLORIS',\n",
+       " 'Benjamin PAVARD',\n",
+       " 'Raphael VARANE',\n",
+       " 'Samuel UMTITI',\n",
+       " 'Paul POGBA',\n",
+       " 'Antoine GRIEZMANN',\n",
+       " 'Kylian MBAPPE',\n",
+       " 'Ousmane DEMBELE',\n",
+       " 'Corentin TOLISSO',\n",
+       " 'Ngolo KANTE',\n",
+       " 'Lucas HERNANDEZ']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +423,7 @@
     "for i in soccer_match:\n",
     "    if i['home_team'] == True:\n",
     "        for i2 in i['players']:\n",
-    "            home_team_pl\n",
+    "            home_team_players.append(i2['name'])\n",
     "        \n",
     "home_team_players\n",
     "\n",
