Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -343,57 +343,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[{'name': 'Hugo LLORIS',\n",
-       "   'captain': True,\n",
-       "   'shirt_number': 1,\n",
-       "   'position': 'Goalie'},\n",
-       "  {'name': 'Benjamin PAVARD',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 2,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Raphael VARANE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 4,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Samuel UMTITI',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 5,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Paul POGBA',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 6,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Antoine GRIEZMANN',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 7,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Kylian MBAPPE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 10,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Ousmane DEMBELE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 11,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Corentin TOLISSO',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 12,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Ngolo KANTE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 13,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Lucas HERNANDEZ',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 21,\n",
-       "   'position': 'Defender'}],\n",
-       " 'Hugo LLORIS',\n",
+       "['Hugo LLORIS',\n",
        " 'Benjamin PAVARD',\n",
        " 'Raphael VARANE',\n",
        " 'Samuel UMTITI',\n",
@@ -406,7 +362,7 @@
        " 'Lucas HERNANDEZ']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,14 +372,14 @@
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
     "home_team_players = []\n",
     "\n",
-    "for i in soccer_match:\n",
-    "    if i['home_team'] == True:\n",
-    "        home_team_players.append(i['players'])\n",
+    "# for i in soccer_match:\n",
+    "#     if i['home_team'] == True:\n",
+    "#         home_team_players.append(i['players'])\n",
     "\n",
-    "for i in soccer_match:\n",
-    "    if i['home_team'] == True:\n",
-    "        for i2 in i['players']:\n",
-    "            home_team_players.append(i2['name'])\n",
+    "# for i in soccer_match:\n",
+    "#     if i['home_team'] == True:\n",
+    "#         for i2 in i['players']:\n",
+    "#             home_team_players.append(i2['name'])\n",
     "        \n",
     "home_team_players\n",
     "\n",
