Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -372,14 +372,14 @@
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
     "home_team_players = []\n",
     "\n",
-    "# for i in soccer_match:\n",
-    "#     if i['home_team'] == True:\n",
-    "#         home_team_players.append(i['players'])\n",
+    "for i in soccer_match:\n",
+    "    if i['home_team'] == True:\n",
+    "        home_team_players.append(i['players'])\n",
     "\n",
     "# for i in soccer_match:\n",
     "#     if i['home_team'] == True:\n",
     "#         for i2 in i['players']:\n",
-    "#             home_team_players.append(i2['name'])\n",
+    "#             home_team_players.append(i2['name'])    #this provides just the\n",
     "        \n",
     "home_team_players\n",
     "\n",
