Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -343,26 +343,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hugo LLORIS',\n",
-       " 'Benjamin PAVARD',\n",
-       " 'Raphael VARANE',\n",
-       " 'Samuel UMTITI',\n",
-       " 'Paul POGBA',\n",
-       " 'Antoine GRIEZMANN',\n",
-       " 'Kylian MBAPPE',\n",
-       " 'Ousmane DEMBELE',\n",
-       " 'Corentin TOLISSO',\n",
-       " 'Ngolo KANTE',\n",
-       " 'Lucas HERNANDEZ']"
+       "[[{'name': 'Hugo LLORIS',\n",
+       "   'captain': True,\n",
+       "   'shirt_number': 1,\n",
+       "   'position': 'Goalie'},\n",
+       "  {'name': 'Benjamin PAVARD',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 2,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Raphael VARANE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 4,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Samuel UMTITI',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 5,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Paul POGBA',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 6,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Antoine GRIEZMANN',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 7,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Kylian MBAPPE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 10,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Ousmane DEMBELE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 11,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Corentin TOLISSO',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 12,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Ngolo KANTE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 13,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Lucas HERNANDEZ',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 21,\n",
+       "   'position': 'Defender'}]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +412,7 @@
     "# for i in soccer_match:\n",
     "#     if i['home_team'] == True:\n",
     "#         for i2 in i['players']:\n",
-    "#             home_team_players.append(i2['name'])    #this provides just the\n",
+    "#             home_team_players.append(i2['name'])    #this provides just their names.\n",
     "        \n",
     "home_team_players\n",
     "\n",
@@ -398,6 +431,9 @@
     "# with the players from ONLY the away team with the position of forward\n",
     "# this should be only one list containing the dictionaries for each of the selected players\n",
     "forwards = None\n",
+    "\n",
+    "\n",
+    "\n",
     "# code goes here"
    ]
   },
