Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -432,7 +432,7 @@
     "# this should be only one list containing the dictionaries for each of the selected players\n",
     "forwards = []\n",
     "\n",
-    "\n",
+    "for i in soccer_\n",
     "\n",
     "\n",
     "\n",
