Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -432,7 +432,8 @@
     "# this should be only one list containing the dictionaries for each of the selected players\n",
     "forwards = []\n",
     "\n",
-    "for i in soccer_\n",
+    "for i in soccer_match:\n",
+    "    if i['']\n",
     "\n",
     "\n",
     "\n",
