Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,8 @@
     "forwards = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    if i['']\n",
+    "    if i['home_team'] == False:\n",
+    "        \n",
     "\n",
     "\n",
     "\n",
