--- a/index.ipynb
+++ b/index.ipynb
@@ -434,7 +434,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    if i['home_team'] == False:\n",
-    "        \n",
+    "        for i in \n",
     "\n",
     "\n",
     "\n",
