Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -434,7 +434,8 @@
     "\n",
     "for i in soccer_match:\n",
     "    if i['home_team'] == False:\n",
-    "        for i in \n",
+    "        for i2 in i['players']:\n",
+    "            \n",
     "\n",
     "\n",
     "\n",
