--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,8 @@
     "for i in soccer_match:\n",
     "    if i['home_team'] == False:\n",
     "        for i2 in i['players']:\n",
-    "            if i2['position'] == ''\n",
+    "            if i2['position'] == 'Forward':\n",
+    "                \n",
     "\n",
     "\n",
     "\n",
