Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
     "    if i['home_team'] == False:\n",
     "        for i2 in i['players']:\n",
     "            if i2['position'] == 'Forward':\n",
-    "                i2\n",
+    "                forwards.append(i2)\n",
     "\n",
     "\n",
     "\n",
