--- a/index.ipynb
+++ b/index.ipynb
@@ -423,9 +423,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Mathew LECKIE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Robbie KRUSE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Andrew NABBOUT',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list \n",
     "# with the players from ONLY the away team with the position of forward\n",
@@ -438,7 +460,7 @@
     "            if i2['position'] == 'Forward':\n",
     "                forwards.append(i2)\n",
     "\n",
-    "\n",
+    "forwards\n",
     "\n",
     "# code goes here"
    ]
