--- a/index.ipynb
+++ b/index.ipynb
@@ -474,6 +474,7 @@
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = None\n",
+    "palyer \n",
     "\n",
     "for i in soccer_match:\n",
     "    \n",
