Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,10 +473,11 @@
    "source": [
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
-    "player_with_highest_num = None\n",
-    "palyer \n",
+    "player_with_highest_num = []\n",
+    "all_players = []\n",
     "\n",
     "for i in soccer_match:\n",
+    "    \n",
     "    \n",
     "\n",
     "# code goes here"
