Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,7 @@
     "all_players = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    \n",
+    "    for i2 in i[pl]\n",
     "    \n",
     "\n",
     "# code goes here"
