Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,8 @@
     "all_players = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    for i2 in i[pl]\n",
+    "    for i2 in i['players']:\n",
+    "        all_players.append(i2)\n",
     "    \n",
     "\n",
     "# code goes here"
