Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,9 +467,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hugo LLORIS',\n",
+       " 1,\n",
+       " 'Benjamin PAVARD',\n",
+       " 2,\n",
+       " 'Raphael VARANE',\n",
+       " 4,\n",
+       " 'Samuel UMTITI',\n",
+       " 5,\n",
+       " 'Paul POGBA',\n",
+       " 6,\n",
+       " 'Antoine GRIEZMANN',\n",
+       " 7,\n",
+       " 'Kylian MBAPPE',\n",
+       " 10,\n",
+       " 'Ousmane DEMBELE',\n",
+       " 11,\n",
+       " 'Corentin TOLISSO',\n",
+       " 12,\n",
+       " 'Ngolo KANTE',\n",
+       " 13,\n",
+       " 'Lucas HERNANDEZ',\n",
+       " 21,\n",
+       " 'Mathew RYAN',\n",
+       " 1,\n",
+       " 'Mark MILLIGAN',\n",
+       " 5,\n",
+       " 'Mathew LECKIE',\n",
+       " 7,\n",
+       " 'Robbie KRUSE',\n",
+       " 10,\n",
+       " 'Andrew NABBOUT',\n",
+       " 11,\n",
+       " 'Aaron MOOY',\n",
+       " 13,\n",
+       " 'Mile JEDINAK',\n",
+       " 15,\n",
+       " 'Aziz BEHICH',\n",
+       " 16,\n",
+       " 'Joshua RISDON',\n",
+       " 19,\n",
+       " 'Trent SAINSBURY',\n",
+       " 20,\n",
+       " 'Tom ROGIC',\n",
+       " 23]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
@@ -478,7 +532,9 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        all_players.append(i2)\n",
+    "        all_players.append(i2['name'])\n",
+    "        all_players.append(i2['shirt_number'])\n",
+    "all_players\n",
     "    \n",
     "\n",
     "# code goes here"
