--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,8 @@
     "    for i2 in i['players']:\n",
     "        all_players.append(i2['name'])\n",
     "        all_players.append(i2['shirt_number'])\n",
-    "all_players\n",
+    "\n",
+    "for i in all_players:\n",
     "    \n",
     "\n",
     "# code goes here"
