--- a/index.ipynb
+++ b/index.ipynb
@@ -532,8 +532,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        all_players.append(i2['name'])\n",
-    "        all_players.append(i2['shirt_number'])\n",
+    "        ifall_players.append(i2['shirt_number'])\n",
     "\n",
     "    \n",
     "\n",
