Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        all_players.append(i2['shirt_number'])\n",
+    "        highest_number_and_name.append(i2['shirt_number'])\n",
     "\n",
     "    \n",
     "\n",
