Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,61 +467,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Hugo LLORIS',\n",
-       " 1,\n",
-       " 'Benjamin PAVARD',\n",
-       " 2,\n",
-       " 'Raphael VARANE',\n",
-       " 4,\n",
-       " 'Samuel UMTITI',\n",
-       " 5,\n",
-       " 'Paul POGBA',\n",
-       " 6,\n",
-       " 'Antoine GRIEZMANN',\n",
-       " 7,\n",
-       " 'Kylian MBAPPE',\n",
-       " 10,\n",
-       " 'Ousmane DEMBELE',\n",
-       " 11,\n",
-       " 'Corentin TOLISSO',\n",
-       " 12,\n",
-       " 'Ngolo KANTE',\n",
-       " 13,\n",
-       " 'Lucas HERNANDEZ',\n",
-       " 21,\n",
-       " 'Mathew RYAN',\n",
-       " 1,\n",
-       " 'Mark MILLIGAN',\n",
-       " 5,\n",
-       " 'Mathew LECKIE',\n",
-       " 7,\n",
-       " 'Robbie KRUSE',\n",
-       " 10,\n",
-       " 'Andrew NABBOUT',\n",
-       " 11,\n",
-       " 'Aaron MOOY',\n",
-       " 13,\n",
-       " 'Mile JEDINAK',\n",
-       " 15,\n",
-       " 'Aziz BEHICH',\n",
-       " 16,\n",
-       " 'Joshua RISDON',\n",
-       " 19,\n",
-       " 'Trent SAINSBURY',\n",
-       " 20,\n",
-       " 'Tom ROGIC',\n",
-       " 23]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'max'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-fc0d4482b3bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoccer_match\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi2\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'players'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mhighest_number_and_name\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'shirt_number'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'max'"
+     ]
     }
    ],
    "source": [
@@ -532,7 +490,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        highest_number_and_name.append(i2['shirt_number'])\n",
+    "        highest_number_and_name.append(i2['shirt_number'].max())\n",
     "\n",
     "    \n",
     "\n",
