--- a/index.ipynb
+++ b/index.ipynb
@@ -486,11 +486,11 @@
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = []\n",
-    "highest_number_and_name = []\n",
+    "shirt_numbers = []\n",
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        highest_number_and_name.append(i2['shirt_number'].max())\n",
+    "        shirt_numbers.append(i2['shirt_number'].max())\n",
     "\n",
     "    \n",
     "\n",
