Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,9 @@
     "        shirt_numbers.append(i2['shirt_number'])\n",
     "highest_shirt_number.append(max(shirt_numbers))\n",
     "\n",
-    "for i in soccer_mat\n",
+    "for i in soccer_match:\n",
+    "    for i2 in i['players']:\n",
+    "        if i2['']\n",
     "\n",
     "    \n",
     "\n",
