Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,8 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        if i2['']\n",
+    "        if i2['shirt_number'] == higher_shirt_number:\n",
+    "            \n",
     "\n",
     "    \n",
     "\n",
