Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['Tom ROGIC']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        if i2['shirt_number'] == highest_shirt_number:\n",
+    "        if i2['shirt_number'] == highest_shirt_number[0]:\n",
     "            player_with_highest_num.append(i2['name'])\n",
     "player_with_highest_num\n",
     "\n",
