--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,8 @@
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = []\n",
     "shirt_numbers = []\n",
-    "highest_shirt_number = []\n",
+    "highest_shirt_number_temp = []\n",
+    "highest_shirt_number = highest_shirt_number_temp[0]\n",
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
