--- a/index.ipynb
+++ b/index.ipynb
@@ -467,19 +467,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-9c40d8136ad2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mshirt_numbers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mhighest_shirt_number_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mhighest_shirt_number\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhighest_shirt_number_temp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoccer_match\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "['Tom ROGIC']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -494,11 +493,27 @@
     "        shirt_numbers.append(i2['shirt_number'])\n",
     "highest_shirt_number.append(max(shirt_numbers))\n",
     "\n",
+    "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
     "        if i2['shirt_number'] == highest_shirt_number[0]:\n",
     "            player_with_highest_num.append(i2['name'])\n",
     "player_with_highest_num\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in soccer_match:\n",
+    "    for i2 in i['players']:\n",
+    "        shirt_numbers.append(i2['shirt_number'])\n",
+    "highest_shirt_number.append(max(shirt_numbers))\n",
+    "\n",
+    "\n",
+    "for i in soccer_match:\n",
+    "    for i2 in i['players']:\n",
+    "        if i2['shirt_number'] == highest_shirt_number[0]:\n",
+    "            player_with_highest_num.append(i2['name'])\n",
+    "player_with_highest_num\n",
+    "\n",
     "\n",
     "    \n",
     "\n",
