Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,7 @@
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = []\n",
     "shirt_numbers = []\n",
-    "highest_shirt_number = []\n",
+    "highest_shirt_number_temp = []\n",
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
@@ -505,8 +505,8 @@
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
     "        shirt_numbers.append(i2['shirt_number'])\n",
-    "highest_shirt_number.append(max(shirt_numbers))\n",
-    "\n",
+    "highest_shirt_number_temp.append(max(shirt_numbers))\n",
+    "highest_shirt_number = highe\n",
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
