Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Tom ROGIC']"
+       "['Tom ROGIC', 'Tom ROGIC']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,11 +506,11 @@
     "    for i2 in i['players']:\n",
     "        shirt_numbers.append(i2['shirt_number'])\n",
     "highest_shirt_number_temp.append(max(shirt_numbers))\n",
-    "highest_shirt_number = highe\n",
+    "highest_shirt_number = highest_shirt_number_temp[0]\n",
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        if i2['shirt_number'] == highest_shirt_number[0]:\n",
+    "        if i2['shirt_number'] == highest_shirt_number:\n",
     "            player_with_highest_num.append(i2['name'])\n",
     "player_with_highest_num\n",
     "\n",
