--- a/index.ipynb
+++ b/index.ipynb
@@ -467,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Tom ROGIC', 'Tom ROGIC']"
+       "['Tom ROGIC']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,17 +488,17 @@
     "shirt_numbers = []\n",
     "highest_shirt_number_temp = []\n",
     "\n",
-    "for i in soccer_match:\n",
-    "    for i2 in i['players']:\n",
-    "        shirt_numbers.append(i2['shirt_number'])\n",
-    "highest_shirt_number.append(max(shirt_numbers))\n",
+    "# for i in soccer_match:\n",
+    "#     for i2 in i['players']:\n",
+    "#         shirt_numbers.append(i2['shirt_number'])\n",
+    "# highest_shirt_number.append(max(shirt_numbers))\n",
     "\n",
     "\n",
-    "for i in soccer_match:\n",
-    "    for i2 in i['players']:\n",
-    "        if i2['shirt_number'] == highest_shirt_number[0]:\n",
-    "            player_with_highest_num.append(i2['name'])\n",
-    "player_with_highest_num\n",
+    "# for i in soccer_match:\n",
+    "#     for i2 in i['players']:\n",
+    "#         if i2['shirt_number'] == highest_shirt_number[0]:\n",
+    "#             player_with_highest_num.append(i2['name'])\n",
+    "# player_with_highest_num\n",
     "\n",
     "\n",
     "\n",
