--- a/index.ipynb
+++ b/index.ipynb
@@ -488,7 +488,7 @@
     "shirt_numbers = []\n",
     "highest_shirt_number_temp = []\n",
     " \n",
-    "# for i in soccer_match:     \n",
+    "# for i in soccer_match:                                #This chunck of code also works.\n",
     "#     for i2 in i['players']:\n",
     "#         shirt_numbers.append(i2['shirt_number'])\n",
     "# highest_shirt_number.append(max(shirt_numbers))\n",
@@ -499,7 +499,6 @@
     "#         if i2['shirt_number'] == highest_shirt_number[0]:\n",
     "#             player_with_highest_num.append(i2['name'])\n",
     "# player_with_highest_num\n",
-    "\n",
     "\n",
     "\n",
     "for i in soccer_match:\n",
@@ -514,8 +513,7 @@
     "            player_with_highest_num.append(i2['name'])\n",
     "player_with_highest_num\n",
     "\n",
-    "\n",
-    "    \n",
+    "  \n",
     "\n",
     "# code goes here"
    ]
