--- a/index.ipynb
+++ b/index.ipynb
@@ -527,7 +527,10 @@
     "# as we can see, the players all have their last names in all caps, as if they are being yelled\n",
     "# we want a list of all the names of the players in this match\n",
     "# but we want both first and last names to be formatted in title case\n",
-    "player_names = Non\n",
+    "player_names = []\n",
+    "\n",
+    "for i in soccer_match:\n",
+    "    for i2 in i['players']\n",
     "# code goes here"
    ]
   },
