Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -520,9 +520,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# as we can see, the players all have their last names in all caps, as if they are being yelled\n",
     "# we want a list of all the names of the players in this match\n",
@@ -530,7 +562,10 @@
     "player_names = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    for i2 in i['players']\n",
+    "    for i2 in i['players']:\n",
+    "        player_names.append(i2['name'].title)\n",
+    "        \n",
+    "print(player_names\n",
     "# code goes here"
    ]
   },
