Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -520,39 +520,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hugo LLORIS', 'Benjamin PAVARD', 'Raphael VARANE', 'Samuel UMTITI', 'Paul POGBA', 'Antoine GRIEZMANN', 'Kylian MBAPPE', 'Ousmane DEMBELE', 'Corentin TOLISSO', 'Ngolo KANTE', 'Lucas HERNANDEZ', 'Mathew RYAN', 'Mark MILLIGAN', 'Mathew LECKIE', 'Robbie KRUSE', 'Andrew NABBOUT', 'Aaron MOOY', 'Mile JEDINAK', 'Aziz BEHICH', 'Joshua RISDON', 'Trent SAINSBURY', 'Tom ROGIC']\n"
+     ]
     }
    ],
    "source": [
@@ -563,9 +539,10 @@
     "\n",
     "for i in soccer_match:\n",
     "    for i2 in i['players']:\n",
-    "        player_names.append(i2['name'].title)\n",
+    "        y = i2['name']\n",
+    "        player_names.append(i2['name'])\n",
     "        \n",
-    "print(player_names\n",
+    "print(player_names)\n",
     "# code goes here"
    ]
   },
