--- a/index.ipynb
+++ b/index.ipynb
@@ -520,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hugo LLORIS', 'Benjamin PAVARD', 'Raphael VARANE', 'Samuel UMTITI', 'Paul POGBA', 'Antoine GRIEZMANN', 'Kylian MBAPPE', 'Ousmane DEMBELE', 'Corentin TOLISSO', 'Ngolo KANTE', 'Lucas HERNANDEZ', 'Mathew RYAN', 'Mark MILLIGAN', 'Mathew LECKIE', 'Robbie KRUSE', 'Andrew NABBOUT', 'Aaron MOOY', 'Mile JEDINAK', 'Aziz BEHICH', 'Joshua RISDON', 'Trent SAINSBURY', 'Tom ROGIC']\n"
+      "['Tom Rogic', 'Tom Rogic']\n"
      ]
     }
    ],
@@ -538,9 +538,10 @@
     "player_names = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "    for i2 in i['players']:\n",
-    "        y = i2['name']\n",
-    "        player_names.append(i2['name'])\n",
+    "#     for i2 in i['players']:\n",
+    "#         y = i2['name']\n",
+    "#         y_title = y.title()\n",
+    "        player_names.append(i2['name'].title())\n",
     "        \n",
     "print(player_names)\n",
     "# code goes here"
