Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -520,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Tom Rogic', 'Tom Rogic']\n"
+      "['Hugo Lloris', 'Benjamin Pavard', 'Raphael Varane', 'Samuel Umtiti', 'Paul Pogba', 'Antoine Griezmann', 'Kylian Mbappe', 'Ousmane Dembele', 'Corentin Tolisso', 'Ngolo Kante', 'Lucas Hernandez', 'Mathew Ryan', 'Mark Milligan', 'Mathew Leckie', 'Robbie Kruse', 'Andrew Nabbout', 'Aaron Mooy', 'Mile Jedinak', 'Aziz Behich', 'Joshua Risdon', 'Trent Sainsbury', 'Tom Rogic']\n"
      ]
     }
    ],
@@ -538,9 +538,7 @@
     "player_names = []\n",
     "\n",
     "for i in soccer_match:\n",
-    "#     for i2 in i['players']:\n",
-    "#         y = i2['name']\n",
-    "#         y_title = y.title()\n",
+    "    for i2 in i['players']:\n",
     "        player_names.append(i2['name'].title())\n",
     "        \n",
     "print(player_names)\n",
